@@ -1,6 +1,8 @@
 Revision history for Image::Scale
 
 0.13
+        - save_jpeg() and save_png() will now properly stringify when passed something such as a
+          Path::Tiny object.
         - Added back support for giflib 4.1.x.
 
 0.12    2016-05-08
